--- a/modules/guidelines/nav.adoc
+++ b/modules/guidelines/nav.adoc
@@ -1,4 +1,5 @@
-* xref:index.adoc
+* xref:index.adoc[]
+* xref:index.adoc[Welcome]
 * Liste des guidelines
-** xref:guideline-01.adoc
-** xref:guideline-02.adoc
+** xref:guideline-01.adoc[]
+** xref:guideline-02.adoc[]
