--- a/modules/rooms/pages/turing.adoc
+++ b/modules/rooms/pages/turing.adoc
@@ -2,7 +2,7 @@
 
 Le seul amphi où l'on est `en featuring` !!!
 
-Trève de plaisanteries. Si vous ne connaissait pas Alan Turing, repentez-vous. 
+Trève de plaisanteries. Si vous ne connaissez pas Alan Turing, repentez-vous. 
 
 Alan Mathison Turing, né le 23 juin 1912 à Londres et mort le 7 juin 1954 à Wilmslow, est un mathématicien et cryptologue britannique, auteur de travaux qui fondent scientifiquement l'informatique.
 
